# txt-detect-rs

./: .gitignore  Cargo.toml  README.md
EAST/: Cargo.toml
EAST/src/: dataset.rs  lib.rs  loss.rs  model.rs  train.rs  utils.rs
src/: main.rs
