[package]
name = "EAST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tch = "0.9.0"
tch = {git = "https://github.com/LaurentMazare/tch-rs", rev ="df445ed40fbcd13d8dcf896b9562beaa3d47e1c6"}
ndarray = "0.15.4"